--- a/css/nav.css
+++ b/css/nav.css
@@ -1,322 +1,261 @@
 
 
-/* Pages nav */
 
-.pages-nav {
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -webkit-justify-content: center;
-  justify-content: center;
-  -webkit-align-items: center;
-  align-items: center;
-  padding: 20px;
-  text-align: center;
-  background: #0e0f0f;
+.cd-nav-trigger circle {
+  /* circle border animation */
+  -webkit-transition: stroke-dashoffset 0.4s 0s;
+  -moz-transition: stroke-dashoffset 0.4s 0s;
+  transition: stroke-dashoffset 0.4s 0s;
+}
+.navigation-is-open .cd-nav-trigger {
+  /* rotate trigger when navigation becomes visible */
+  -webkit-transform: rotate(180deg);
+  -moz-transform: rotate(180deg);
+  -ms-transform: rotate(180deg);
+  -o-transform: rotate(180deg);
+  transform: rotate(180deg);
+}
+.navigation-is-open .cd-nav-trigger .cd-nav-icon::after,
+.navigation-is-open .cd-nav-trigger .cd-nav-icon::before {
+  /* animate arrow --> from hamburger to arrow */
+  width: 50%;
+  -webkit-transition: -webkit-transform 0.5s, width 0.5s;
+  -moz-transition: -moz-transform 0.5s, width 0.5s;
+  transition: transform 0.5s, width 0.5s;
+}
+.navigation-is-open .cd-nav-trigger .cd-nav-icon::before {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+.navigation-is-open .cd-nav-trigger .cd-nav-icon::after {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+.no-touch .navigation-is-open .cd-nav-trigger:hover .cd-nav-icon::after, .no-touch .navigation-is-open .cd-nav-trigger:hover .cd-nav-icon::before {
+  top: 0;
+}
+.navigation-is-open .cd-nav-trigger circle {
+  stroke-dashoffset: 0;
+  -webkit-transition: stroke-dashoffset 0.4s 0.3s;
+  -moz-transition: stroke-dashoffset 0.4s 0.3s;
+  transition: stroke-dashoffset 0.4s 0.3s;
+}
+@media only screen and (min-width: 1170px) {
+  .cd-nav-trigger {
+    top: 40px;
+  }
 }
 
-.js .pages-nav {
-  position: absolute;
+#cd-nav > div > div:nth-child(1) > nav > ul > li a {
+  color: #fff;
+  font-family: 'Montserrat';
+  font-weight: 200;
+  color: black;
+  font-size: 35px;
+  text-decoration: none;
+  transition: 0.4s;
+  list-style-type: none;
+}
+
+#cd-nav > div > div:nth-child(1) > nav > ul > li a:hover {
+  color: #5DCF5B;
+}
+
+@media screen and (max-width: 650px) {
+  #cd-nav > div > div:nth-child(1) > nav > ul > li a {
+  color: black;
+  font-size: 25px;
+  transition: 0.4s;
+  }
+}
+
+#cd-nav > div > div:nth-child(1) > nav > ul > li {
+  text-decoration: none;
+  color: black;
+  list-style-type: none;
+}
+
+.cd-nav {
+  position: fixed;
+  z-index: 999999;
   top: 0;
   left: 0;
+  height: 100%;
   width: 100%;
-  height: 50vh;
-  padding: 30px;
-  pointer-events: none;
-  opacity: 0;
-  background: transparent;
-  -webkit-transition: -webkit-transform 1.2s, opacity 1.2s;
-  transition: transform 1.2s, opacity 1.2s;
-  -webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
-  transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
-  -webkit-transform: translate3d(0, 150px, 0);
-  transform: translate3d(0, 150px, 0);
+  background-color: #fff;
+  opacity: 0.98;
+  visibility: hidden;
+  -webkit-transition: visibility 0.3s 0.3s;
+  -moz-transition: visibility 0.3s 0.3s;
+  transition: visibility 0.3s 0.3s;
 }
-
-.js .pages-nav--open {
-  pointer-events: auto;
-  opacity: 1;
-  -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
+.cd-nav .cd-navigation-wrapper {
+  /* all navigation content */
+  height: 100%;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
+  padding: 40px 5% 40px calc(5% + 80px);
+  /* Force Hardware Acceleration in WebKit */
+  -webkit-transform: translateZ(0);
+  -moz-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  -o-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-transform: translateX(-50%);
+  -moz-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  -o-transform: translateX(-50%);
+  transform: translateX(-50%);
+  -webkit-transition: -webkit-transform 0.7s;
+  -moz-transition: -moz-transform 0.7s;
+  transition: transform 0.7s;
+  -webkit-transition-timing-function: cubic-bezier(0.86, 0.01, 0.77, 0.78);
+  -moz-transition-timing-function: cubic-bezier(0.86, 0.01, 0.77, 0.78);
+  transition-timing-function: cubic-bezier(0.86, 0.01, 0.77, 0.78);
 }
-
-.pages-nav__item {
-  width: 33%;
-  padding: 1em;
+.navigation-is-open .cd-nav {
+  visibility: visible;
+  -webkit-transition: visibility 0s 0s;
+  -moz-transition: visibility 0s 0s;
+  transition: visibility 0s 0s;
 }
-
-.js .pages-nav__item {
-  padding: 0 10%;
+.navigation-is-open .cd-nav .cd-navigation-wrapper {
+  -webkit-transform: translateX(0);
+  -moz-transform: translateX(0);
+  -ms-transform: translateX(0);
+  -o-transform: translateX(0);
+  transform: translateX(0);
+  -webkit-transition: -webkit-transform 0.5s;
+  -moz-transition: -moz-transform 0.5s;
+  transition: transform 0.5s;
+  -webkit-transition-timing-function: cubic-bezier(0.82, 0.01, 0.77, 0.78);
+  -moz-transition-timing-function: cubic-bezier(0.82, 0.01, 0.77, 0.78);
+  transition-timing-function: cubic-bezier(0.82, 0.01, 0.77, 0.78);
 }
-
-.pages-nav .pages-nav__item--social {
-  width: 100%;
-  opacity: 0;
-  -webkit-transition: -webkit-transform 1.2s, opacity 1.2s;
-  transition: transform 1.2s, opacity 1.2s;
-  -webkit-transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
-  transition-timing-function: cubic-bezier(0.2, 1, 0.3, 1);
-  -webkit-transform: translate3d(0, 20px, 0);
-  transform: translate3d(0, 20px, 0);
-}
-
-.pages-nav--open .pages-nav__item--social {
-  opacity: 1;
-  -webkit-transition-delay: 0.35s;
-  transition-delay: 0.35s;
-  -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-}
-
-.link {
-  font-size: 0.85em;
-  font-weight: bold;
+.cd-nav h2 {
   position: relative;
-  letter-spacing: 1px;
+  margin-bottom: 1.7em;
+  font-size: 1.3rem;
+  font-weight: 800;
+  color: #080b0f;
   text-transform: uppercase;
 }
-
-.link:hover,
-.link:focus {
-  color: #fff;
-}
-
-.link--page {
-  display: block;
-  color: #cecece;
-}
-
-.link--page:not(.link--faded)::before {
+.cd-nav h2::after {
+  /* bottom separation line */
   content: '';
   position: absolute;
-  top: 100%;
-  left: 50%;
-  width: 30px;
-  height: 2px;
-  margin: 5px 0 0 -15px;
-  background: #fff;
-  -webkit-transition: -webkit-transform 0.3s;
-  transition: transform 0.3s;
-  -webkit-transform: scale3d(0, 1, 1);
-  transform: scale3d(0, 1, 1);
-}
-
-.link--page:hover:before {
-  -webkit-transform: scale3d(1, 1, 1);
-  transform: scale3d(1, 1, 1);
-}
-
-.link--faded {
-  color: #4f4f64;
-}
-
-.link--faded:hover,
-.link--faded:focus {
-  color: #5c5edc;
-}
-
-.link--page.link--faded {
-  font-size: 0.65em;
-}
-
-.link--social {
-  font-size: 1.5em;
-  margin: 0 0.75em;
-}
-
-.text-hidden {
-  position: absolute;
-  display: block;
-  overflow: hidden;
-  width: 0;
-  height: 0;
-  color: transparent;
-}
-
-/* Pages stack */
-
-.js .pages-stack {
-  z-index: 100;
-  pointer-events: none;
-  -webkit-perspective: 1200px;
-  perspective: 1200px;
-  -webkit-perspective-origin: 50% -50%;
-  perspective-origin: 50% -50%;
-}
-
-.js .page {
-  position: relative;
-  z-index: 5;
-  overflow: hidden;
-  width: 100%;
-  height: 100vh;
-  pointer-events: auto;
-  background: #2a2b30;
-  box-shadow: 0 -1px 10px rgba(0, 0, 0, 0.1);
-}
-
-.js .pages-stack--open .page {
-  cursor: pointer;
-  -webkit-transition: -webkit-transform 0.45s, opacity 0.45s;
-  transition: transform 0.45s, opacity 0.45s;
-  -webkit-transition-timing-function: cubic-bezier(0.6, 0, 0.4, 1);
-  transition-timing-function: cubic-bezier(0.6, 0, 0.4, 1);
-}
-
-.js .page--inactive {
-  position: absolute;
-  z-index: 0;
-  top: 0;
-  opacity: 0;
-}
-
-/* page content */
-
-.info {
-  font-size: 1.25em;
-  max-width: 50%;
-  margin-top: 1.5em;
-}
-
-.poster {
-  position: absolute;
-  bottom: 4vh;
-  left: 60%;
-  max-width: 100%;
-  max-height: 80%;
-}
-
-/* Menu button */
-
-.menu-button {
-  position: absolute;
-  z-index: 1000;
-  top: 30px;
-  left: 30px;
-  width: 30px;
-  height: 24px;
-  padding: 0;
-  cursor: pointer;
-  border: none;
-  outline: none;
-  background: transparent;
-}
-
-.no-js .menu-button {
-  display: none;
-}
-
-.menu-button::before,
-.menu-button::after,
-.menu-button span {
-  background: #5f656f;
-}
-
-.menu-button::before,
-.menu-button::after {
-  content: '';
-  position: absolute;
-  top: 50%;
   left: 0;
-  width: 100%;
-  height: 2px;
-  pointer-events: none;
-  -webkit-transition: -webkit-transform 0.25s;
-  transition: transform 0.25s;
-  -webkit-transform-origin: 50% 50%;
-  transform-origin: 50% 50%;
+  bottom: -20px;
+  height: 1px;
+  width: 60px;
+  background-color: currentColor;
 }
-
-.menu-button span {
-  position: absolute;
-  left: 0;
-  overflow: hidden;
-  width: 100%;
-  height: 2px;
-  text-indent: 200%;
-  -webkit-transition: opacity 0.25s;
-  transition: opacity 0.25s;
-}
-
-.menu-button::before {
-  -webkit-transform: translate3d(0, -10px, 0) scale3d(0.8, 1, 1);
-  transform: translate3d(0, -10px, 0) scale3d(0.8, 1, 1);
-}
-
-.menu-button::after {
-  -webkit-transform: translate3d(0, 10px, 0) scale3d(0.8, 1, 1);
-  transform: translate3d(0, 10px, 0) scale3d(0.8, 1, 1);
-}
-
-.menu-button--open span {
-  opacity: 0;
-}
-
-.menu-button--open::before {
-  -webkit-transform: rotate3d(0, 0, 1, 45deg);
-  transform: rotate3d(0, 0, 1, 45deg);
-}
-
-.menu-button--open::after {
-  -webkit-transform: rotate3d(0, 0, 1, -45deg);
-  transform: rotate3d(0, 0, 1, -45deg);
-}
-
-@media screen and (max-width: 60em) {
-  .info {
-    max-width: 100%;
-  }
-  .poster {
+.cd-nav .cd-primary-nav {
+    margin-top: 0;
     position: relative;
-    top: auto;
-    left: auto;
-    display: block;
-    max-width: 100%;
-    max-height: 50vh;
-    margin: 0 0 0 50%;
+    top: 5em;
+}
+.cd-nav .cd-primary-nav li {
+  margin: 1.6em 0;
+}
+.cd-nav .cd-primary-nav a {
+  font-family: "Merriweather", serif;
+  font-size: 2.4rem;
+  color: rgba(255, 255, 255, 0.3);
+  display: inline-block;
+}
+.cd-nav .cd-primary-nav a.selected {
+  color: #ffffff;
+}
+.no-touch .cd-nav .cd-primary-nav a:hover {
+  color: #ffffff;
+}
+.cd-nav .cd-contact-info {
+  margin-top: 80px;
+}
+.cd-nav .cd-contact-info li {
+  font-family: "Merriweather", serif;
+  margin-bottom: 1.5em;
+  line-height: 1.2;
+  color: black;
+  list-style-type: none;
+}
+.cd-nav .cd-contact-info a {
+  color: #ffffff;
+}
+.cd-nav .cd-contact-info span {
+  display: block;
+}
+.cd-nav .cd-contact-info li, .cd-nav .cd-contact-info a, .cd-nav .cd-contact-info span {
+  font-size: 1.6rem;
+  font-family: Open Sans;
+  font-weight: 100;
+  list-style-type: none;
+}
+@media only screen and (min-width: 1170px) {
+  .cd-nav .cd-navigation-wrapper {
+    padding: 62px 20%;
   }
-  .pages-nav__item {
+  .cd-nav .cd-navigation-wrapper::after {
+    clear: both;
+    content: "";
+    display: table;
+  }
+  .cd-nav .cd-half-block {
     width: 50%;
-    min-height: 20px;
+    float: left;
   }
-  .link--page {
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
+  .cd-nav .cd-primary-nav {
+    margin-top: 0;
   }
-  .link--social {
-    margin: 0 0.1em;
+  .cd-nav h2 {
+    font-size: 1.5rem;
+    margin-bottom: 5.6em;
+  }
+  .cd-nav .cd-primary-nav li {
+    margin: 2em 0;
+  }
+  .cd-nav .cd-primary-nav a {
+    font-size: 4.4rem;
+  }
+  .cd-nav .cd-contact-info {
+    margin-top: 120px;
+    text-align: right;
+  }
+  .cd-nav .cd-contact-info li {
+    margin-bottom: 2.4em;
+  }
+  .cd-nav .cd-contact-info li, .cd-nav .cd-contact-info a, .cd-nav .cd-contact-info span {
+    font-size: 2rem;
+    color: black;
+    list-style-type: none;
   }
 }
 
-@media screen and (max-width: 40em) {
-  .js .pages-nav {
-    display: block;
-    padding: 10px 20px 0 20px;
-    text-align: left;
-  }
-  .js .pages-nav__item {
-    width: 100%;
-    padding: 4px 0;
-  }
-  .js .pages-nav__item--small {
-    display: inline-block;
-    width: auto;
-    margin-right: 5px;
-  }
-  .pages-nav__item--social {
-    font-size: 0.9em;
-  }
-  .menu-button {
-    top: 15px;
-    right: 10px;
-    left: auto;
-  }
-  .info {
-    font-size: 0.85em;
-  }
-  .poster {
-    margin: 1em;
-  }
+.no-js main {
+  height: auto;
+  overflow: visible;
+}
+
+.no-js .cd-nav {
+  position: static;
+  visibility: visible;
+}
+.no-js .cd-nav .cd-navigation-wrapper {
+  height: auto;
+  overflow: visible;
+  padding: 100px 5%;
+  -webkit-transform: translateX(0);
+  -moz-transform: translateX(0);
+  -ms-transform: translateX(0);
+  -o-transform: translateX(0);
+  transform: translateX(0);
 }
