--- a/css/slitslider.css
+++ b/css/slitslider.css
@@ -378,6 +378,7 @@
 }
 
 .demo-1 .sl-slide blockquote cite {
+    color: #fff;
     font-size: 10px;
     padding-top: 10px;
     display: inline-block;
@@ -392,7 +393,7 @@
 /* First Slide */
 .demo-1 .bg-1 .sl-slide-inner,
 .demo-1 .bg-1 .sl-content-slice {
-    background:url("../img/bg1.png") no-repeat center;
+    background:url("../img/slitslider/slidestock1.png")no-repeat center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -402,7 +403,11 @@
 /* Second Slide */
 .demo-1 .bg-2 .sl-slide-inner,
 .demo-1 .bg-2 .sl-content-slice {
-    background: #000;
+    background:url("../img/slitslider/slidestock2.png")no-repeat center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 .demo-1 .bg-2 [data-icon]:after,
@@ -417,7 +422,11 @@
 /* Third Slide */
 .demo-1 .bg-3 .sl-slide-inner,
 .demo-1 .bg-3 .sl-content-slice {
-    background: #db84ad;
+    background:url("../img/slitslider/slidestock3.png")no-repeat center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 .demo-1 .bg-3 .deco {
@@ -428,7 +437,7 @@
 .demo-1 .bg-3 [data-icon]:after {
     color: #fff;
     text-shadow: 0 0 1px #fff;
-    box-shadow: inset 0 0 0 10px #b55381;
+    box-shadow: inset 0 0 0 10px #fff;
 }
 
 .demo-1 .bg-3 h2,
@@ -444,16 +453,20 @@
 /* Forth Slide */
 .demo-1 .bg-4 .sl-slide-inner,
 .demo-1 .bg-4 .sl-content-slice {
-    background: #5bc2ce;
+    background:url("../img/slitslider/slidestock4.png")no-repeat center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 .demo-1 .bg-4 .deco {
-    border-color: #379eaa;
+    border-color: #fff;
 }
 
 .demo-1 .bg-4 [data-icon]:after {
     text-shadow: 0 0 1px #277d87;
-    color: #277d87;
+    color: #fff;
 }
 
 .demo-1 .bg-4 h2,
@@ -469,15 +482,18 @@
 /* Fifth Slide */
 .demo-1 .bg-5 .sl-slide-inner,
 .demo-1 .bg-5 .sl-content-slice {
-    background: #ffeb41;
+    background:url("../img/slitslider/slidestock5.png")no-repeat center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 .demo-1 .bg-5 .deco {
-    border-color: #ECD82C;
+    border-color: #fff;
 }
 
 .demo-1 .bg-5 .deco:after {
-    color: #000;
     text-shadow: 0 0 1px #000;
 }
 
