--- a/sass/loops/loops.scss
+++ b/sass/loops/loops.scss
@@ -1,6 +1,6 @@
 @import 'vars-modules/variables.scss';
 
-// this loops through and crates images in css
+// this loops through and creates images in css
 
 $socials : facebook googleplus twitter linkedin;
 
