--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,11 @@ html, body {
 ============================================= */
 /* CLEARFIX
 ============================================= */
+.valbeam {
+  width: 100%;
+  height: 2px;
+  position: relative; }
+
 .homepageHeader {
   position: relative;
   top: 50%;
@@ -452,6 +457,11 @@ html, body {
 ============================================= */
 /* CLEARFIX
 ============================================= */
+.valbeam {
+  width: 100%;
+  height: 2px;
+  position: relative; }
+
 .homepageHeader {
   position: relative;
   top: 50%;
@@ -1024,7 +1034,7 @@ nav.topNav {
   transition: 0.2s; }
 
 .cloud-based {
-  background: url("../img/services/breaker.png") no-repeat center;
+  background: url("../img/slitslider/slidestock3.png") no-repeat center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
