--- a/sass/vars-modules/variables.scss
+++ b/sass/vars-modules/variables.scss
@@ -26,6 +26,12 @@ $link-hovered: #381E3A;
 /* CLEARFIX
 ============================================= */
 
+%valbeam {
+  width: 100%;
+  height: 2px;
+  position: relative;
+}
+
 %centeredInScreen {
   position: relative;
   top: 50%;
